// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`label simple 1`] = `
Program {
  "children": Array [
    Label {
      "kind": "label",
      "name": Identifier {
        "kind": "identifier",
        "name": "a",
      },
    },
    Echo {
      "expressions": Array [
        String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"Foo\\"",
          "unicode": false,
          "value": "Foo",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`label simple 2`] = `
Program {
  "children": Array [
    Label {
      "kind": "label",
      "name": Identifier {
        "kind": "identifier",
        "name": "longName",
      },
    },
    Echo {
      "expressions": Array [
        String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"Foo\\"",
          "unicode": false,
          "value": "Foo",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
